--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -1,4 +1,4 @@
-<h2>Your weekly installment</h2>
+<h2>Your weekly installment</h2><% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 <% if flash[:notice] %>
   <p class="notice"><%= flash[:notice] %></p>
 <% end %>
@@ -28,7 +28,7 @@ visit each set of factors prior to submitting your report.</p>
   <%= f.hidden_field :user_id %>
   <%= f.hidden_field :group_id %>
   <% index = 0 %>
-  <div data-role="collapsible-set" data-content-theme="a">
+  <div data-role="collapsible-set" data-content-theme="<%=theme_code%>">
     <% @factors.each do |factor| %>
       <div data-role="collapsible" data-collapsed="true" >
         <h3><%= factor.name %></h3>
