--- a/app/views/home/demo_start.html.erb
+++ b/app/views/home/demo_start.html.erb
@@ -1,5 +1,5 @@
 <h1>Your Tasks</h1><% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
-<p>Hello <%= @current_user.nil? ? "John" : @current_user.first_name %>,
+<p>Hello <%= @current_user.nil? ? "John" : @current_user.first_name %>,</br>
     You've got one task at the moment.
 
    
@@ -27,7 +27,7 @@
 
     <tr>
       <td>
-        <%= link_to "SuperStars", demo_complete_path %>
+        <%= link_to "SuperStars", assessment_demo_complete_path %>
         <br>
         (Project: Research Paper)
       </td>
@@ -38,10 +38,23 @@
       <td>SuperStars</td>
       <td>Advanced Collaborative Research</td>
       <td> <%= 1.day.ago.strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-      <td> <%= 1.day.from_now.strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+      <td> <%= 1.day.from_now.end_of_day.strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+      <td>N/A</td>
+    </tr>
+
+    <tr>
       <td>
-        N/A
-                </td>
+        <%= link_to "What is collaboration?", bingo_demo_complete_path %>
+      </td>
+      <td>Terms list submission</td>
+      <td>
+        <em>0%</em>
+      </td>
+      <td>SuperStars</td>
+      <td>Advanced Collaborative Research</td>
+      <td> <%= 1.week.ago.strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+      <td> <%= 1.day.from_now.end_of_day.strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+      <td>N/A</td>
     </tr>
     </tbody>
   </table>
