--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -23,12 +23,15 @@
             <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you? %>
               Your team wants to collaborate: 
               <%= link_to "Accept", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: "yes" ) %> or 
+                        id: @candidate_list.id, desired: "yes" ),
+                        data: { confirm: 'Are you sure? Did you save your changes? This cannot be undone.' } %> or
               <%= link_to "Decline", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: "no" ) %> 
+                        id: @candidate_list.id, desired: "no" ), 
+                        data: { confirm: 'Are you sure? Did you save your changes?' } %> 
             <% else %>
               <%= link_to "Invite your group to help?", request_bingo_collaboration_path( 
-                        id: @candidate_list.id, desired: "yes" ) %> 
+                        id: @candidate_list.id, desired: "yes" ), 
+                        data: { confirm: 'Are you sure? Did you save your changes? This cannot be undone.' } %> 
             <% end %>
           <% end %>
         <% end %>
