--- a/app/views/administrative_mailer/summary_report.text.erb
+++ b/app/views/administrative_mailer/summary_report.text.erb
@@ -4,8 +4,8 @@ Below is your students' completion report from <%= @name %> at
 <%= link_to "CoLab.online", root_url %> which just wrapped up:
 
 Student | Completed at:
-<% @completion_report.keys do |user_name| %>
-<%= user_name %> | <%= @completion_report[ user_name ] %>
+<% @completion_report.keys do |user_email| %>
+<%= user_email %> | <%= @completion_report[ user_email ][ :name ] %> | <%= @completion_report[ user_email ][ :status ] %>
 <% end %>
 
 Thank you!
