--- a/app/views/administrative_mailer/summary_report.text.erb
+++ b/app/views/administrative_mailer/summary_report.text.erb
@@ -1,7 +1,9 @@
 Hello, <%= @user.first_name %>.
 
-Below is your students' completion report from <%= @name %> at
-<%= link_to "CoLab.online", root_url %> which just wrapped up:
+Below is your students' completion report from the task 
+'<%= @name %>' in the course '<%= @course_name %>' which 
+recently completed at <%= root_url %>. There are <%= @completion_report.keys.count %>
+students enrolled in the course.
 
 Student | Completed at:
 <% @completion_report.keys do |user_email| %>
