--- a/app/views/home/demo_start.html.erb
+++ b/app/views/home/demo_start.html.erb
@@ -1,6 +1,6 @@
 <h1>Your Tasks</h1><% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
 <p>Hello <%= @current_user.nil? ? "John" : @current_user.first_name %>,</br>
-    You've got one task at the moment.
+    You've got 2 tasks today.
 
    
   <table data-role="table"
