--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -87,7 +87,7 @@
       <tbody>
           <% @course.bingo_games.each do |game| %>
             <tr>
-                <td><%= game.name %></td>
+                <td><%= link_to game.name, game %></td>
                 <td>
                 <% if game.active %>
                 Active
@@ -128,7 +128,7 @@
       <tbody>
           <% @course.projects.each do |project| %>
             <tr>
-                <td><%= project.name %></td>
+                <td><%= link_to project.name, project %></td>
                 <td>
                 <% if project.active %>
                 Active
@@ -169,7 +169,7 @@
       <tbody>
           <% @course.experiences.each do |experience| %>
             <tr>
-                <td><%= experience.name %></td>
+                <td><%= link_to experience.name, experience %></td>
                 <td>
                 <% if experience.active %>
                   Active
