--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -125,7 +125,10 @@
             </td>
             <td> <%= task.course.name %></td>
             <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
-            <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
+            <td>
+              <% task.term_list_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></br>
+              (List for class on <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %>)
+            </td>
             <td>N/A</td>
           </tr>
         <% else %>
