--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -127,7 +127,7 @@
             <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
             <td>
               <%= task.term_list_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></br>
-              (List for class on <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d %Z") %>)
+              <small><i>(List for class on <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d") %></i></small>)
             </td>
             <td>N/A</td>
           </tr>
