Updated account maintenance mailers and added text versions.

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,14 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>Someone has requested a change to your CoLab password. Follow these steps to do so:
+<ol>
+<li>Go to <%= link_to 'CoLab', root_url %>.</li>
+<li>Log out if you are currently logged in.</li>
+<li><%= link_to 'Click this password reset link.', edit_password_url(@resource, reset_password_token: @token) %></li>
+<li>Enter and confirm your new password in the page.</li>
+<li>Click the 'Change my password' button</li>
+&hellip;and you're done!</p>
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+<p>CoLab Support</p>
