--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,7 @@
               <%= f.input :first_name, required: true, autofocus: true %>
               <%= f.input :last_name, required: true, autofocus: true %>
               <%= f.input :email, required: true, autofocus: true %>
-              <%= link_to "Want to change your password?", send_reset_path %><br />
+              <%= link_to "Want to change your password? Click here and we'll email instructions.", send_reset_path %><br />
             </div>
 
 
