--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>We're contacting you to notify you that your <%= link_to 'CoLab', root_url %> password has been changed.</p>
+
+<p>CoLab Support</p>
