Fixing some of the emails.

--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -1,6 +1,6 @@
 Welcome to CoLab, <%= @email %>!
 
-CoLab (<%=link_to root_url %>) is a web-based system for helping instructors to make sure students engaged in group work get the most out of the experience.
+CoLab (<%= root_url %>) is a web-based system for helping instructors to make sure students engaged in group work get the most out of the experience.
 
 You are receiving this either because:
 
