--- a/app/views/devise/mailer/password_change.text.erb
+++ b/app/views/devise/mailer/password_change.text.erb
@@ -1,5 +1,5 @@
 Hello <%= @resource.email %>!
 
-We're contacting you to notify you that your CoLab (<%= link_to root_url %>) password has been changed.
+We're contacting you to notify you that your CoLab (<%= root_url %>) password has been changed.
 
 CoLab Support
