--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -2,9 +2,9 @@ Hello <%= @resource.email %>!
 
 Someone has requested a change to your CoLab password. Follow these steps to do so:
 
-1. Go to <%= link_to root_url %>.
+1. Navigate to <%= root_url %>.
 2. Log out if you are currently logged in.
-3. Click this password reset link. <%= link_to edit_password_url(@resource, reset_password_token: @token) %>.
+3. Click this password reset link. <%= edit_password_url(@resource, reset_password_token: @token) %>.
 4. Enter and confirm your new password in the page.
 5. Click the 'Change my password' button.
 
