Added (and applied) User.informal_name to presentation layer.

--- a/app/views/devise/mailer/unlock_instructions.text.erb
+++ b/app/views/devise/mailer/unlock_instructions.text.erb
@@ -1,4 +1,4 @@
-Hello <%= @resource.email %>!
+Hello <%= @resource.informal_name %>!
 
 Your CoLab (<%= root_url %>) account has been locked 
 due to an excessive number of unsuccessful sign in attempts.
