--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.informal_name %>!</p>
 
 <p>We're contacting you to notify you that your <%= link_to 'CoLab', root_url %> password has been changed.</p>
 
