--- a/app/views/devise/mailer/password_change.text.erb
+++ b/app/views/devise/mailer/password_change.text.erb
@@ -1,4 +1,4 @@
-Hello <%= @resource.email %>!
+Hello <%= @resource.informal_name %>!
 
 We're contacting you to notify you that your CoLab (<%= root_url %>) password has been changed.
 
