--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -124,6 +124,7 @@
       <tr>
         <th>Name</th>
         <th data-priority="1">Status</th>
+        <th data-priority="1">Close Date</th>
         <th data-priority="0">Actions</th>
       </tr>
       </thead>
@@ -137,6 +138,9 @@
                 <% else %>
                 <span class="error">Inactive</span>
                 <% end %></td>
+                <td>
+                  <%= game.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %>
+                </td>
                 <td><%= link_to 'Show', game %>&nbsp;|&nbsp;
                 <%= link_to( "Activate", activate_bingo_game_path( game ) ) + raw("&nbsp;|&nbsp;" ) unless game.active %>
                 <%= link_to 'Edit', edit_bingo_game_path(game) %>&nbsp;|&nbsp;
@@ -165,6 +169,7 @@
         <tr>
           <th>Name</th>
           <th data-priority="1">Status</th>
+          <th data-priority="1">Close date</th>
           <th data-priority="0">Actions</th>
         </tr>
       </thead>
@@ -178,6 +183,9 @@
                 <% else %>
                 <span class="error">Inactive</span>
                 <% end %></td>
+                <td>
+                  <%= project.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %>
+                </td>
                 <td><%= link_to 'Show', project %>&nbsp;|&nbsp;
                 <%= link_to( "Activate", activate_project_path( project ) ) + raw("&nbsp;|&nbsp;" ) unless project.active %>
                 <%= link_to 'Edit', edit_project_path(project) %>&nbsp;|&nbsp;
@@ -206,6 +214,7 @@
         <tr>
           <th>Name</th>
           <th data-priority="1">Status</th>
+          <th data-priority="1">Close Date</th>
           <th data-priority="0">Actions</th>
         </tr>
       </thead>
@@ -219,6 +228,9 @@
                 <% else %>
                   <span class="error">Inactive</span>
                 <% end %>
+                </td>
+                <td>
+                  <%= experience.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %>
                 </td>
                 <td><%= link_to 'Show', experience %>&nbsp;|&nbsp;
                   <%= link_to( "Activate", activate_experience_path( experience ) ) + raw("&nbsp;|&nbsp;" ) unless experience.active %>
