--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -19,6 +19,7 @@
       <h3>Description:</h3>
       <%= @school.description %>
     </p>
+    <%= link_to 'Edit school details', edit_school_path(@school) %>
   </div>
   <div id="courses" class="ui-body-<%= theme_code %> ui-content">
 
@@ -48,7 +49,7 @@
       </tr>
       </thead>
       <tbody>
-          <% @school.bingo_games.each do |game| %>
+          <% @school.courses.each do |course| %>
             <tr>
                 <td><%= link_to course.name, course %></td>
                 <td><%= course.number %></td>
@@ -59,10 +60,9 @@
                 <td><%= course.bingo_games.count %></td>
                 <td><%= course.start_date.strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
                 <td><%= course.end_date.strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
-                <td><%= link_to 'Show', game %>&nbsp;|&nbsp;
-                <%= link_to( "Activate", activate_bingo_game_path( game ) ) + raw("&nbsp;|&nbsp;" ) unless game.active %>
-                <%= link_to 'Edit', edit_bingo_game_path(game) %>&nbsp;|&nbsp;
-                <%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= link_to 'Show', course %>&nbsp;|&nbsp;
+                <%= link_to 'Edit', edit_course_path(course) %>&nbsp;|&nbsp;
+                <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
           <% end %>
       </tbody>
