--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,7 +105,7 @@
               </td>
               <td>Terms list submission</td>
               <td>
-                <%= candidate_list.percent_complete %>%
+                <%= candidate_list.percent_completed %>%
               </td>
             <% elsif task.reviewed %>
               <td>
