Adding a meta-stat for bingo games.

--- a/app/views/bingo_games/show.html.erb
+++ b/app/views/bingo_games/show.html.erb
@@ -104,6 +104,7 @@
               </table>
           </p>
           <p>
+          This class identified <%= @bingo_game.get_concepts.count %> unique concepts.
             <table data-role="table"
               id="basicTable"
               data-mode="columntoggle"
