Previous commit was incomplete - adding the research selection capabilities.

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -22,7 +22,7 @@
                         :data => { :icon => "bullets" } %>
                     </li>
                     <li>
-                      <%= link_to "Admin", admin_path,
+                      <%= link_to "Administration", admin_path,
                         :data => { :icon => "gear" } %>
                     </li>
                     </ul>
